# shatranjEngine

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .pre-commit-config.yaml  BLACK_MOVES_TEST_RESULTS.md  CMakeLists.txt  CMakePresets.json  Dockerfile  FINAL_TEST_SUMMARY.md  README.md  TEST_RESULTS.md  UCI_README.md  WASM_BUILD.md  compile_wasm.sh  conanfile.txt  github-actions.yaml  movedump.js  movedump.wasm  shatranj_simple_uci.js  shatranj_simple_uci.wasm  shatranj_uci.js  test_black_moves_via_sequence.js  test_movedump.html  test_shatranj_uci.html  test_shatranj_uci_black_moves.js  test_shatranj_uci_final.js  test_shatranj_uci_interactive.js  test_shatranj_uci_simple.js  test_shatranj_uci_verbose.js  test_uci.sh  test_wasm.js  test_wasm_engines.html  test_wasm_uci_interactive.js  validate_wasm.html
.githooks/: pre-commit
empty_template/: CMakeLists.txt  solution.cc
empty_template/test/: CMakeLists.txt  sample1_unittest.cc
gtestsamples/: CMakeLists.txt
gtestsamples/test/: CMakeLists.txt  sample1_unittest.cc  sample2_unittest.cc
performance_tests/: CMakeLists.txt  solution.h
performance_tests/test/: CMakeLists.txt  perf001_unittest.cc
src/: CMakeLists.txt  board.cpp  board.h  main.cpp  main_simple_stockfish_uci.cpp  main_uci.cpp  piece_group.cpp  piece_group.h  player.cpp  player.h  position.h  satranc.py  shatranc.h  shatranc_piece.cpp  shatranc_piece.h  shatranj.cpp  shatranj.h  types.h
src/lib/: CMakeLists.txt  bitboard.h  board.cpp  board.h  helper.h  history.cpp  history.h  piece_group.cpp  piece_group.h  player.cpp  player.h  position.h  shatranc_piece.cpp  shatranc_piece.h  shatranj.cpp  shatranj.h  types.h
src/lib/shatranj_simple/: board.cpp  board.h  helper.h  history.cpp  history.h  piece_group.cpp  piece_group.h  player.cpp  player.h  position.h  shatranc_piece.cpp  shatranc_piece.h  shatranj.cpp  shatranj.h  simple_stockfish_uci.cpp  simple_stockfish_uci.h  types.h  uci.cpp  uci.h
src/lib/stockfish/: bitboard.cpp  bitboard.h  engine.cpp  engine.h  helper.h  json_game_exporter.h  movegen.cpp  movegen.h  movepick.cpp  movepick.h  position.cpp  position.h  stockfish_helper.h  stockfish_position.cpp  stockfish_position.h  tt.cpp  tt.h  types.h  uci.cpp  uci.h
src/lib/stockfish/custom/: custom_search.cpp  custom_search.h  custommovepicker.cpp  custommovepicker.h  customtranspositiontable.h  evaluate.cpp  evaluate.h  game_over_check.cpp  game_over_check.h  helper.h  minimax.cpp  minimax.h  movepick_helper.h  perft.cpp  perft.h  pesto_evaluate.cpp  pesto_evaluate.h  pv_manager.h  search_prototypes.h  timer.h
src/pychesstk/: main.py  main2.py  main3.py  main4.py  main5.py  main6.py  main7.py  main8.py  requirements.txt
src/test/: CMakeLists.txt  bitboard_tests.cpp  dummy_play_tests.cpp  json_file_tests.cpp  jsonexporter_tests.cpp  last_piece_capture_case_tests.cpp  main.cpp  nonpv_pv_search_comparison.cpp  perft_tests.cpp  sample1_unittest.cc  sample_shatranj_gamelay.cpp  search_prototypes.h  stockfish_evaluation_function_tests.cpp  stockfish_minimax_tests.cpp  testhelper.h  trasnposition_table_tests.cpp
src/test/testmetadata/: 1.json  10.json  11.json  12.json  13.json  14.json  15.json  16.json  17.json  18.json  19.json  2.json  20.json  21.json  22.json  23.json  24.json  25.json  26.json  27.json  28.json  29.json  3.json  30.json  31.json  32.json  33.json  34.json  35.json  4.json  5.json  6.json  7.json  8.json  9.json
web-interface/: FIXES.md  README.md  debug_wasm.js  shatranj.html  shatranj_simple_uci.wasm  shatranj_uci.wasm  test_shatranj_simple_uci_wasm.js  test_simple.js  test_uci_interactive.js  uci-worker.js
