
find_library(GTEST gtest)
find_library(GTEST_MAIN gtest_main)
find_library(GMOCK gmock)

add_executable(sample1test sample1_unittest.cc)
add_executable(sample2test sample2_unittest.cc)
add_executable(sample3test sample3_unittest.cc)
add_executable(sample4test sample4_unittest.cc)
add_executable(sample5test sample5_unittest.cc)
add_executable(sample6test sample6_unittest.cc)
add_executable(sample7test sample7_unittest.cc)
add_executable(sample8test sample8_unittest.cc)
add_executable(sample9test sample9_unittest.cc)
add_executable(sample10test sample10_unittest.cc)

target_link_libraries(sample1test ${GTEST} ${GTEST_MAIN} ${GMOCK} gsamples)
target_link_libraries(sample2test ${GTEST} ${GTEST_MAIN} ${GMOCK} gsamples)
target_link_libraries(sample3test ${GTEST} ${GTEST_MAIN} ${GMOCK} gsamples)
target_link_libraries(sample4test ${GTEST} ${GTEST_MAIN} ${GMOCK} gsamples)
target_link_libraries(sample5test ${GTEST} ${GTEST_MAIN} ${GMOCK} gsamples)
target_link_libraries(sample6test ${GTEST} ${GTEST_MAIN} ${GMOCK} gsamples)
target_link_libraries(sample7test ${GTEST} ${GTEST_MAIN} ${GMOCK} gsamples)
target_link_libraries(sample8test ${GTEST} ${GTEST_MAIN} ${GMOCK} gsamples)
target_link_libraries(sample9test ${GTEST} ${GTEST_MAIN} ${GMOCK} gsamples)
target_link_libraries(sample10test ${GTEST} ${GTEST_MAIN} ${GMOCK} gsamples)

target_include_directories(sample1test PRIVATE ../)
target_include_directories(sample2test PRIVATE ../)
target_include_directories(sample3test PRIVATE ../)
target_include_directories(sample4test PRIVATE ../)
target_include_directories(sample5test PRIVATE ../)
target_include_directories(sample6test PRIVATE ../)
target_include_directories(sample7test PRIVATE ../)
target_include_directories(sample8test PRIVATE ../)
target_include_directories(sample9test PRIVATE ../)
target_include_directories(sample10test PRIVATE ../)

include(Dart)
add_test (NAME sample1test COMMAND sample1test)
add_test (NAME sample2test COMMAND sample2test)
add_test (NAME sample3test COMMAND sample3test)
add_test (NAME sample4test COMMAND sample4test)
add_test (NAME sample5test COMMAND sample5test)
add_test (NAME sample6test COMMAND sample6test)
add_test (NAME sample7test COMMAND sample7test)
add_test (NAME sample8test COMMAND sample8test)
add_test (NAME sample9test COMMAND sample9test)
add_test (NAME sample10test COMMAND sample10test)